18943
```scala
class A {
  this match {
    case this => println("foo")
    case _ => ???
   }
}
```

A.scala:3: error: '.' expected but '=>' found.
    case this => println("foo")
              ^
A.scala:4: error: identifier expected but ';' found.
    case _ => ???
^
two errors found
